--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_plus_years-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_plus_years-x.twig
@@ -1,3 +1,5 @@
+{% set tabindex = startindex + (x * 10) + 9 %}
+
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
 		'name': 'std_plus_years' ~ x,
@@ -9,7 +11,7 @@
 			'standard_due_years'
 		],
 		'attributes': {
-			'tabindex': x ~ '9',
+			'tabindex': tabindex,
 			'data-error': '.error',
 			'readonly': code.std_due_date(x) == 0,
 			'max':  manager.fieldAttribute('std_plus_years', 'max')
