--- a/site/templates/twig/code-tables/mar/trm/edit/form.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form.twig
@@ -8,7 +8,7 @@
 	<hr>
 
 	<div class="mb-3 type-splits collapse {{ code.method == constant('METHOD_STD', manager) ? 'show' : '' }}" id="std-splits">
-		{% include 'code-tables/mar/trm/edit/form/terms-splits-standard.twig' %}
+		{% include 'code-tables/mar/trm/edit/form/terms-splits-standard.twig' with {'startindex': 30} %}
 	</div>
 
 	<div class="mb-3 type-splits collapse {{ code.method == constant('METHOD_EOM', manager) ? 'show' : '' }}" id="eom-splits">
