--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_plus_months-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_plus_months-x.twig
@@ -1,3 +1,5 @@
+{% set tabindex = startindex + (x * 10) + 7 %}
+
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
 		'name': 'std_plus_months' ~ x,
@@ -9,7 +11,7 @@
 			'standard_plus_months'
 		],
 		'attributes': {
-			'tabindex': x ~ '7',
+			'tabindex': tabindex,
 			'data-error': '.error',
 			'readonly': code.std_due_day(x) == 0,
 			'max': manager.fieldAttribute('std_plus_months', 'max')
