--- a/site/templates/twig/code-tables/mar/trm/edit/form/terms-splits-standard.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/terms-splits-standard.twig
@@ -2,7 +2,8 @@
 	var                    Description / Instance of
 	-------------------------------------------------
 	code                   CustomerTermsCode
-	m_trm                  module CodeTablesTrm
+	manager                Dplus\CodeTables\Mar\Trm
+	startindex             (int)
 #}
 <div class="row align-items-center text-center">
 	<div class="col-2">
