--- a/site/templates/twig/code-tables/mar/trm/edit/form/terms-splits-eom.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/terms-splits-eom.twig
@@ -1,3 +1,10 @@
+{#
+	var                    Description / Instance of
+	-------------------------------------------------
+	code                   CustomerTermsCode
+	manager                Dplus\CodeTables\Mar\Trm
+	startindex             (int)
+#}
 <div class="row align-items-center text-center">
 	<div class="col-3">
 		<h5 class="text-center">Day</h5>
