--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_from_day-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_from_day-x.twig
@@ -1,4 +1,5 @@
 {% set value = code.eom_from_day(x) %}
+{% set tabindex = startindex + (x * 10) + 0 %}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
@@ -11,7 +12,7 @@
 			'eom_from_day'
 		],
 		'attributes': {
-			'tabindex': x ~ '11',
+			'tabindex': '-1',
 			'readonly': true,
 			'max': manager.fieldAttribute('eom_from_day', 'max')
 		}
