--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_plus_months-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_plus_months-x.twig
@@ -1,4 +1,5 @@
 {% set value = code.eom_plus_months(x) %}
+{% set tabindex = startindex + (x * 10) + 6 %}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
@@ -11,7 +12,7 @@
 			'eom_plus_months'
 		],
 		'attributes': {
-			'tabindex': x ~ '17',
+			'tabindex': tabindex,
 			'data-error': '.error',
 			'readonly': code.eom_thru_day(x) == 0,
 			'max': manager.fieldAttribute('eom_plus_months', 'max'),
