--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_thru_day-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_thru_day-x.twig
@@ -1,4 +1,5 @@
 {% set value = code.eom_thru_day(x) %}
+{% set tabindex = startindex + (x * 10) + 1 %}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
@@ -11,7 +12,7 @@
 			'eom_thru_day'
 		],
 		'attributes': {
-			'tabindex': x ~ '12',
+			'tabindex': tabindex,
 			'readonly': value == 0,
 			'min': x == 1,
 			'max': manager.fieldAttribute('eom_thru_day', 'max'),
