FIX: add block page_title_text so it can be extended upon

--- a/site/templates/twig/util/bread-crumbs.twig
+++ b/site/templates/twig/util/bread-crumbs.twig
@@ -32,7 +32,9 @@
 
 	<ol class="breadcrumb rounded-0 mb-0 bg-dark text-white flex-grow-1 flex-sm-grow-0">
 		<li class="breadcrumb-item pull-right w-100 text-center">
-			{{ page.get('pagetitle|headline|title')|raw }}
+			{% block page_title_text %}
+				{{ page.get('pagetitle|headline|title')|raw }}
+			{% endblock %}
 		</li>
 	</ol>
 </nav>
