--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/ccprefix.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/ccprefix.twig
@@ -1,3 +1,6 @@
+{% set readonly = code.type != constant('TYPE_CREDITCARD', manager) %}
+{% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
+
 {% include 'util/bootstrap/form/input-group.twig' with {
 	'inputgroup': {
 		'type': 'prepend',
@@ -11,8 +14,8 @@
 				'aria-label':  'Credit Card Prefix',
 				'data-jqv': 'true',
 				'maxlength': 1,
-				'readonly': code.type != constant('TYPE_CREDITCARD', manager),
-				'tabindex': code.type != constant('TYPE_CREDITCARD', manager) ? '-' ~ tabindex : tabindex,
+				'readonly': readonly,
+				'tabindex':  tabindex,
 			}
 		},
 		'button': {
@@ -24,8 +27,8 @@
 				'data-target': '#ajax-modal',
 				'data-lookupurl': page.searchLookupUrl('mar/crcd/'),
 				'data-input': '#ccprefix',
-				'disabled': code.type != constant('TYPE_CREDITCARD', manager),
-				'tabindex': code.type != constant('TYPE_CREDITCARD', manager) ? '-1' : ''
+				'disabled': readonly,
+				'tabindex': readonly ? '-1' : ''
 			}
 		}
 	}
