--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/freightallow.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/freightallow.twig
@@ -1,4 +1,6 @@
 {% set value = code.method == constant('METHOD_STD', manager) ? code.freightallow : 'N' %}
+{% set readonly = code.method == constant('METHOD_EOM', manager) %}
+{% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
 
 {% include 'util/bootstrap/form/select-simple.twig' with {
 	'select': {
@@ -8,9 +10,9 @@
 		'haskeys': true,
 		'options': manager.fieldAttribute('freightallow', 'options'),
 		'attributes': {
-			'readonly': code.method == constant('METHOD_EOM', manager),
-			'disabled': code.method == constant('METHOD_EOM', manager),
-			'tabindex': code.method == constant('METHOD_EOM', manager) ? '-' ~ tabindex : tabindex,
+			'readonly': readonly,
+			'disabled': readonly,
+			'tabindex': tabindex,
 		}
 	}
 } %}
