--- a/site/templates/twig/code-tables/mar/trm/edit/form.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form.twig
@@ -23,16 +23,16 @@
 			NOTE: Only show delete if code already exists.
 		#}
 		{% if manager.recordlocker.userHasLocked(code.code) or code.isNew() %}
-			<button type="submit" class="btn btn-success form_button">
+			<button type="submit" class="btn btn-success form_button" tabindex="300">
 				<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 			</button>
 			{% if code.isNew() == false %}
-				<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger form_button delete_button">
+				<a href="{{ page.codeDeleteUrl(code.code) }}" class="btn btn-danger form_button delete_button" tabindex="301">
 					<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
 				</a>
 			{% endif %}
 		{% endif %}
-		<a href="{{ page.codeListUrl(code.code) }}" class="btn btn-warning pull-right">
+		<a href="{{ page.codeListUrl(code.code) }}" class="btn btn-warning pull-right" tabindex="302">
 			<i class="fa fa-times" aria-hidden="true"></i> Close
 		</a>
 	</div>
