--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/freightallow.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/freightallow.twig
@@ -1,6 +1,9 @@
 {% set value = code.method == constant('METHOD_STD', manager) ? code.freightallow : 'N' %}
 {% set readonly = code.method == constant('METHOD_EOM', manager) %}
+{% set readonly = readonly == false ? manager.fieldAttribute('freightallow', 'enabled') == false : readonly %}
+
 {% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
+
 
 {% include 'util/bootstrap/form/select-simple.twig' with {
 	'select': {
