FIX: add tabindex

--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/country.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/country.twig
@@ -9,7 +9,8 @@
 			'attributes': {
 				'placeholder': '',
 				'aria-label':  'Country',
-				'data-jqv': 'true'
+				'data-jqv': 'true',
+				'tabindex': tabindex,
 			}
 		},
 		'button': {
@@ -21,7 +22,7 @@
 				'data-target': '#ajax-modal',
 				'data-lookupurl': page.searchLookupUrl('misc/country-codes/'),
 				'data-input': '#country',
-				'tabindex': tabindex,
+				
 			}
 		}
 	}
