--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/expiredate.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/expiredate.twig
@@ -11,6 +11,11 @@
 					'min-date': 'now'|date('m/d/Y'),
 					'tabindex': tabindex,
 				}
+			},
+			'button': {
+				'attributes': {
+					'tabindex': '-1',
+				}
 			}
 		}
 	} %}
