--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/method.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/method.twig
@@ -6,6 +6,8 @@
 		'haskeys': true,
 		'options': manager.fieldAttribute('method', 'options'),
 		'showvalue': true,
-		'tabindex': tabindex,
+		'attributes': {
+			'tabindex': tabindex,
+		}
 	}
 } %}
