--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/freightallow.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/freightallow.twig
@@ -1,6 +1,15 @@
 {% set value = code.method == constant('METHOD_STD', manager) ? code.freightallow : 'N' %}
-{% set readonly = code.method == constant('METHOD_EOM', manager) %}
-{% set readonly = readonly == false ? manager.fieldAttribute('freightallow', 'enabled') == false : readonly %}
+
+{# 1. Set Readonly if field is enabled #}
+{% set readonly = manager.fieldAttribute('freightallow', 'enabled') == false %}
+{# 2. Set Readonly if method is EOM #}
+{% if readonly == false %}
+	{% set readonly = code.method == constant('METHOD_EOM', manager) %}
+{% endif %}
+{# Set Readonly if Method is STD and if artmorderpct1 != 100 #}
+{% if readonly == false and code.method == constant('METHOD_STD', manager) %}
+	{% set readonly = code.order_percent(1) != 100 %}
+{% endif %}
 
 {% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
 
