FIX: update input class

--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_date-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_date-x.twig
@@ -10,7 +10,7 @@
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
-			'standard_discount_date'
+			'std_disc_date'
 		],
 		'attributes': {
 			'tabindex': tabindex,
