--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_day-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_day-x.twig
@@ -1,5 +1,5 @@
 {% set readonly = code.std_disc_percent(x) == 0 %}
-{% set readonly = code.std_disc_days(x) > 0 ? true : readonly %}
+{% set readonly = code.std_disc_days(x) > 0 ? false : readonly %}
 {% set readonly = code.std_disc_date(x) > 0 ? true : readonly %}
 {% set tabindex = startindex + (x * 10) + 3 %}
 
@@ -11,7 +11,7 @@
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
-			'standard_discount_day'
+			'std_disc_day'
 		],
 		'attributes': {
 			'tabindex': tabindex,
