--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_percent-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_percent-x.twig
@@ -8,7 +8,7 @@
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
-			'standard-discount-percent'
+			'std_disc_percent'
 		],
 		'attributes': {
 			'tabindex': tabindex,
