--- a/site/templates/twig/code-tables/mar/trm/edit/form/terms-splits-standard.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/terms-splits-standard.twig
@@ -48,7 +48,7 @@
 		<div class="list-group-item standard-split" data-index="{{ x }}">
 			<div class="row align-items-center text-center">
 				<div class="col-2 border-right border-dark">
-					<div class="row align-items-center standard-percent">
+					<div class="row align-items-center std-percent">
 						<div class="col-3">
 							{{ x }}
 						</div>
@@ -58,7 +58,7 @@
 					</div>
 				</div>
 				<div class="col border-right border-dark">
-					<div class="row align-items-center standard-discount">
+					<div class="row align-items-center std-discount">
 						<div class="col">
 							{% include 'code-tables/mar/trm/edit/form/inputs/standard/std_disc_percent-x.twig' %}
 						</div>
@@ -74,7 +74,7 @@
 					</div>
 				</div>
 				<div class="col">
-					<div class="row align-items-center standard-due">
+					<div class="row align-items-center std-due">
 						<div class="col">
 							{% include 'code-tables/mar/trm/edit/form/inputs/standard/std_due_days-x.twig' %}
 						</div>
