FIX: update tabindexes, readonly attributes

--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_day-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_day-x.twig
@@ -1,7 +1,9 @@
 {% set readonly = code.std_disc_percent(x) == 0 %}
 {% set readonly = code.std_disc_days(x) > 0 ? true : readonly %}
 {% set readonly = code.std_disc_date(x) > 0 ? true : readonly %}
+
 {% set tabindex = startindex + (x * 10) + 3 %}
+{% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
