--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_days-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_days-x.twig
@@ -3,6 +3,7 @@
 {% set readonly = code.std_disc_date(x) ? true : readonly %}
 
 {% set tabindex = startindex + (x * 10) + 2 %}
+{% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
