--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_date-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_date-x.twig
@@ -1,12 +1,18 @@
+{% set value = code.std_disc_date(x) %}
+{# 1. If discount percent == 0 #}
 {% set readonly = code.std_disc_percent(x) == 0 %}
+{# 2. If discount days > 0 #}
 {% set readonly = code.std_disc_days(x) > 0 ? true : readonly %}
+{# 3. If discount days > 0 #}
 {% set readonly = code.std_disc_day(x) > 0 ? true : readonly %}
+
 {% set tabindex = startindex + (x * 10) + 4 %}
+{% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
 		'name': 'std_disc_date' ~ x,
-		'value': code.date(x) == 0 ? '' : code.date(x),
+		'value': value ? value|convertdate(manager.fieldAttribute('std_disc_date', 'dateformat')) : '',
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
@@ -14,7 +20,6 @@
 		],
 		'attributes': {
 			'tabindex': tabindex,
-			'placeholder': manager.fieldAttribute('std_disc_date', 'placeholder'),
 			'readonly': readonly,
 			'regex': manager.fieldAttribute('std_disc_date', 'regex')
 		}
