--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_due_day-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_due_day-x.twig
@@ -1,19 +1,25 @@
-{% set readonly = x > 1 %}
-{% set readonly = code.order_percent(x) == 0 ? true : readonly %}
+
+{% set value = code.std_due_day(x) ? code.std_due_day(x) : 0 %}
+{# 1. If Order Percent = 0 #}
+{% set readonly = code.order_percent(x) == 0 ? true : false %}
+{# 2. If Due Days > 0 #}
 {% set readonly = code.std_due_days(x) > 0 ? true : readonly %}
+{# 3. If Due Date  #}
 {% set readonly = code.std_due_date(x) > 0 ? true : readonly %}
+
 {% set tabindex = startindex + (x * 10) + 6 %}
+{% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
 
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
 		'name': 'std_due_day' ~ x,
 		'type': 'number',
-		'value': code.std_due_day(x) ? code.std_due_day(x) : 0,
+		'value': value,
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
-			'standard_due_day'
+			'std_due_day',
 		],
 		'attributes': {
 			'tabindex': tabindex,
