--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_plus_years-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_plus_years-x.twig
@@ -1,4 +1,7 @@
+{% set readonly = code.std_due_date(x) == 0 %}
+
 {% set tabindex = startindex + (x * 10) + 9 %}
+{% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
@@ -8,12 +11,12 @@
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
-			'standard_due_years'
+			'std_due_years'
 		],
 		'attributes': {
 			'tabindex': tabindex,
 			'data-error': '.error',
-			'readonly': code.std_due_date(x) == 0,
+			'readonly': readonly,
 			'max':  manager.fieldAttribute('std_plus_years', 'max')
 		}
 	}
