--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_percent-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_percent-x.twig
@@ -1,10 +1,15 @@
+{% set value = code.std_disc_percent(x) %}
+
+{% set readonly = code.order_percent(x) == 0 ? true : false %}
+
 {% set tabindex = startindex + (x * 10) + 1 %}
+{% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
 		'name': 'std_disc_percent' ~ x,
 		'type': 'number',
-		'value': code.std_disc_percent(x),
+		'value':value != 0 ? value|number_format(manager.fieldAttribute('order_percent', 'precision')) : '',
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
@@ -13,7 +18,7 @@
 		'attributes': {
 			'tabindex': tabindex,
 			'data-error': '.error',
-			'readonly': code.order_percent(x) == 0,
+			'readonly': readonly,
 			'max': manager.fieldAttribute('std_disc_percent', 'max')
 		}
 	}
