--- a/site/templates/twig/code-tables/mar/trm/edit/form/terms-splits-standard.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/terms-splits-standard.twig
@@ -45,7 +45,7 @@
 		</div>
 	</div>
 	{% for x in 1..constant('NBR_SPLITS_METHOD_S', manager) %}
-		<div class="list-group-item standard-split" data-index="{{ x }}">
+		<div class="list-group-item std-split" data-index="{{ x }}">
 			<div class="row align-items-center text-center">
 				<div class="col-2 border-right border-dark">
 					<div class="row align-items-center std-percent">
