--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_due_days-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_due_days-x.twig
@@ -18,7 +18,7 @@
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
-			'std_due_day'
+			'std_due_days'
 		],
 		'attributes': {
 			'tabindex': tabindex,
