--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_plus_years-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_plus_years-x.twig
@@ -12,7 +12,7 @@
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
-			'std_due_years'
+			'std_plus_years'
 		],
 		'attributes': {
 			'tabindex': tabindex,
