--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/order_percent-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/order_percent-x.twig
@@ -18,7 +18,8 @@
 		'attributes': {
 			'tabindex': tabindex,
 			'max': manager.fieldAttribute('order_percent', 'max'),
-			'readonly': readonly
+			'readonly': readonly,
+			'data-lastvalue': value|number_format(manager.fieldAttribute('order_percent', 'precision')) 
 		}
 	}
 } %}
