--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_due_date-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_due_date-x.twig
@@ -9,13 +9,12 @@
 {% set tabindex = startindex + (x * 10) + 8 %}
 {% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
 
-
-{# x >= 1 #}
+{# prepend ""now"|date('Y') to value so it can be parsed and formatted #}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
 		'name': 'std_due_date' ~ x,
-		'value': value ? value|convertdate(manager.fieldAttribute('std_due_date', 'dateformat')) : '',
+		'value': value ? ("now"|date('Y') ~ value)|convertdate(manager.fieldAttribute('std_due_date', 'dateformat')) : '',
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
