--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_day-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_day-x.twig
@@ -15,7 +15,7 @@
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
-			'std_disc_day'
+			'std_disc_day',
 		],
 		'attributes': {
 			'tabindex': tabindex,
