--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_date-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_date-x.twig
@@ -18,12 +18,12 @@
 		'size': 'sm', 
 		'addclasses': [
 			'text-right',
-			'std_disc_date'
+			'std_disc_date',
 		],
 		'attributes': {
 			'tabindex': tabindex,
 			'readonly': readonly,
-			'regex': manager.fieldAttribute('std_disc_date', 'regex')
+			'regex': manager.fieldAttribute('std_disc_date', 'regex'),
 		}
 	}
 } %}
