--- a/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
@@ -119,6 +119,7 @@
 {% if manager.fieldAttribute('termsgroup', 'enabled') %}
 	<div class="row">
 		<div class="col-sm-6">
+			<span class="badge badge-info">TODO: enable using sys custid for enabling / hiding field</span>
 			<div class="row mb-3">
 				<div class="col-sm-4">
 					<label for="termsgroup">Terms Group</label>
