FIX: set readonly, tabindex

--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_disc_day-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_disc_day-x.twig
@@ -16,7 +16,7 @@
 		'attributes': {
 			'tabindex': tabindex,
 			'readonly': readonly,
-			'max': 31
+			'max': manager.fieldAttribute('eom_disc_day', 'max')
 		}
 	}
 } %}
