--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_disc_percent-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_disc_percent-x.twig
@@ -1,6 +1,8 @@
 {% set value = code.eom_disc_percent(x) %}
 {% set readonly = code.eom_thru_day(x) == 0 %}
+
 {% set tabindex = startindex + (x * 10) + 2 %}
+{% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
