--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_due_day-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/eom/eom_due_day-x.twig
@@ -1,5 +1,9 @@
 {% set value = code.eom_due_day(x) %}
+
+{% set readonly = code.eom_thru_day(x) == 0 %}
+
 {% set tabindex = startindex + (x * 10) + 5 %}
+{% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
