--- a/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
@@ -2,6 +2,7 @@
 
 {% set cocom = mCodeTables.getCodeTable('mar', 'cocom') %}
 {% set trmg  = mCodeTables.getCodeTable('mar', 'trmg') %}
+{% set crcd  = mCodeTables.getCodeTable('mar', 'crcd') %}
 
 <div class="row">
 	<div class="col-sm-6">
@@ -60,7 +61,7 @@
 				<div class="col-sm-4 px-0">
 					{% include 'code-tables/mar/trm/edit/form/inputs/ccprefix.twig' with {tabindex: 6} %}
 				</div>
-				<small class="text-muted ajax-description description"></small>
+				<small class="text-muted ajax-description description">{{ crcd.description(code.ccprefix) }}</small>
 			</div>
 		</div>
 	</div>
