--- a/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/top.twig
@@ -7,7 +7,7 @@
 <div class="row">
 	<div class="col-sm-6">
 		<div class="row mb-3">
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<label for="code">Code</label>
 			</div>
 			<div class="col-sm-6 input-parent">
@@ -19,7 +19,7 @@
 	</div>
 	<div class="col-sm-6">
 		<div class="row mb-3">
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<label for="description">Description</label>
 			</div>
 			<div class="col-sm-7">
@@ -31,7 +31,7 @@
 <div class="row">
 	<div class="col-sm-6">
 		<div class="row mb-3">
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<label for="method">Method</label>
 			</div>
 			<div class="col-sm-4">
@@ -43,7 +43,7 @@
 <div class="row">
 	<div class="col-sm-6">
 		<div class="row mb-3">
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<label for="type">Type</label>
 			</div>
 			<div class="col-sm-4">
@@ -54,14 +54,18 @@
 	</div>
 	<div class="col-sm-6">
 		<div class="row mb-3">
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<label for="ccprefix">CC Prefix</label>
 			</div>
 			<div class="col-sm-6 input-parent">
-				<div class="col-sm-4 px-0">
-					{% include 'code-tables/mar/trm/edit/form/inputs/ccprefix.twig' with {tabindex: 6} %}
+				<div class="row">
+					<div class="col-sm-4">
+						{% include 'code-tables/mar/trm/edit/form/inputs/ccprefix.twig' with {tabindex: 6} %}
+					</div>
+					<div class="col-sm-6 pt-1">
+						<small class="text-muted ajax-description description ">{{ crcd.description(code.ccprefix) }}</small>
+					</div>
 				</div>
-				<small class="text-muted ajax-description description">{{ crcd.description(code.ccprefix) }}</small>
 			</div>
 		</div>
 	</div>
@@ -69,7 +73,7 @@
 <div class="row">
 	<div class="col-sm-6">
 		<div class="row mb-3">
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<label for="hold">Hold</label>
 			</div>
 			<div class="col-sm-2">
@@ -79,7 +83,7 @@
 	</div>
 	<div class="col-sm-6">
 		<div class="row mb-3">
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<label for="freightallow">Freight Allow</label>
 			</div>
 			<div class="col-sm-2">
@@ -91,7 +95,7 @@
 <div class="row">
 	<div class="col-sm-6">
 		<div class="row mb-3">
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<label for="expiredate">Expire Date</label>
 			</div>
 			<div class="col-sm-4">
@@ -103,16 +107,20 @@
 <div class="row">
 	<div class="col-sm-6">
 		<div class="row mb-3">
-			<div class="col-sm-4">
+			<div class="col-sm-3">
 				<label for="country">Country</label>
 			</div>
-			<div class="col-sm-6 input-parent">
-				<div class="col-sm-4 px-0">
-					{% include 'code-tables/mar/trm/edit/form/inputs/country.twig' with {tabindex: 10} %}
+			<div class="col-sm-9 input-parent">
+				<div class="row">
+					<div class="col-sm-3">
+						{% include 'code-tables/mar/trm/edit/form/inputs/country.twig' with {tabindex: 10} %}
+					</div>
+					<div class="col-sm-6 pt-1">
+						<small class="text-muted ajax-description description">
+							{{ cocom.description(code.country) }}
+						</small>
+					</div>
 				</div>
-				<small class="text-muted ajax-description description">
-					{{ cocom.description(code.country) }}
-				</small>
 			</div>
 		</div>
 	</div>
