--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/country.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/country.twig
@@ -22,7 +22,7 @@
 				'data-target': '#ajax-modal',
 				'data-lookupurl': page.searchLookupUrl('misc/country-codes/'),
 				'data-input': '#country',
-				
+				'tabindex': tabindex - 0.5
 			}
 		}
 	}
