--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/order_percent-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/order_percent-x.twig
@@ -4,6 +4,7 @@
 
 {% set tabindex = startindex + (x * 10) + 0 %}
 {% set tabindex = readonly ? '-' ~ tabindex : tabindex %}
+{% set readonly = x == 1 ? false : readonly %}
 
 {% include 'util/bootstrap/form/input.twig' with {
 	'input': {
