--- a/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_days-x.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/inputs/standard/std_disc_days-x.twig
@@ -2,6 +2,7 @@
 
 {% set readonly = code.std_disc_percent(x) == 0 %}
 {% set readonly = code.std_disc_days(x) > 0 ? false : readonly %}
+{% set readonly = code.std_disc_day(x) ? true : readonly %}
 {% set readonly = code.std_disc_date(x) ? true : readonly %}
 
 {% set tabindex = startindex + (x * 10) + 2 %}
