--- a/site/templates/twig/code-tables/mar/trm/edit/form/terms-splits-standard.twig
+++ b/site/templates/twig/code-tables/mar/trm/edit/form/terms-splits-standard.twig
@@ -96,7 +96,7 @@
 			</div>
 		</div>
 	{% endfor %}
-	<div class="list-group-item py-1">
+	<div class="list-group-item py-1 collapse">
 		<div class="row align-items-center text-center">
 			<div class="col-2 border-right border-dark">
 				<div class="row align-items-center">
