--- a/site/templates/twig/code-tables/mar/spm/form/gl-account.twig
+++ b/site/templates/twig/code-tables/mar/spm/form/gl-account.twig
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div class="form-group input-parent">
 	<label for="{{ name }}">GL Account</label>
 	{% include 'util/bootstrap/form/input-group.twig' with {
 			'inputgroup': {
