--- a/site/templates/twig/code-tables/mar/spm/form/userid.twig
+++ b/site/templates/twig/code-tables/mar/spm/form/userid.twig
@@ -1,4 +1,4 @@
-<div>
+<div class="input-parent">
 	<label for="userid">Login ID</label>
 	{% include 'util/bootstrap/form/input-group.twig' with {
 			'inputgroup': {
