--- a/site/templates/twig/code-tables/mar/spm/form/vendorid.twig
+++ b/site/templates/twig/code-tables/mar/spm/form/vendorid.twig
@@ -1,5 +1,5 @@
-<div>
-	<label for="vendorid">VendorID</label>
+<div class="input-parent">
+	<label for="vendorid">Vendor ID</label>
 	{% include 'util/bootstrap/form/input-group.twig' with {
 			'inputgroup': {
 				'type': 'prepend',
