--- a/site/templates/twig/code-tables/mar/spm/form/groupid.twig
+++ b/site/templates/twig/code-tables/mar/spm/form/groupid.twig
@@ -1,4 +1,4 @@
-<div>
+<div class="input-parent">
 	<label for="groupid">Group ID</label>
 	{% include 'util/bootstrap/form/input-group.twig' with {
 			'inputgroup': {
