--- a/site/templates/twig/code-tables/mar/spm/form.twig
+++ b/site/templates/twig/code-tables/mar/spm/form.twig
@@ -17,7 +17,7 @@
 <form action="{{ input.paginateUrl(1) }}" method="POST" id="code-form" data-code="">
 	<input type="hidden" name="action" value="update">
 
-	<div class="row">
+	<div class="form-row">
 		<div class="col-sm-3">
 			<div class="form-group">
 				<label for="code">ID</label>
@@ -32,16 +32,16 @@
 		</div>
 	</div>
 	
-	<div class="row mb-3">
+	<div class="form-row mb-3">
 		<div class="col-sm-3">
 			<div class="form-group">
 				{% include 'code-tables/mar/spm/form/groupid.twig' %}
 			</div>
 		</div>
 
-		<div class="col-sm-2">
+		<div class="col-sm-3">
 			<div class="form-group">
-				<label for="cycle">Cycle</label>
+				<label for="cycle">Commission Cycle</label>
 				{% include 'util/bootstrap/form/input.twig' with {
 						'input': {
 							'name': 'cycle',
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 
-		<div class="col-sm-3">
+		<div class="col-sm-2">
 			<div class="form-group">
 				<label for="manager">Manager</label>
 				{% include 'util/bootstrap/form/select-simple.twig' with {
@@ -80,7 +80,7 @@
 		</div>
 	</div>
 
-	<div class="row mb-3">
+	<div class="form-row mb-3">
 		<div class="col-sm-3">
 			<div class="form-group">
 				<label for="lastsaledate">Last Sales Date</label>
@@ -103,10 +103,10 @@
 	</div>
 
 
-	<legend>Sales-To-Date</legend>
+	<legend>Sales</legend>
 	{% set fields = ['salesmtd', 'salesytd', 'salesltd'] %}
 
-	<div class="row">
+	<div class="form-row">
 		{% for field in fields %}
 			<div class="col-sm-3 form-group">
 				<label for="{{ field }}">{{ manager.fieldAttribute(field, 'label') }}</label>
@@ -128,10 +128,10 @@
 		{% endfor %}
 	</div>
 
-	<legend>Earned-To-Date</legend>
+	<legend>Commissions Earned</legend>
 	{% set fields = ['earnedmtd', 'earnedytd', 'earnedltd'] %}
 
-	<div class="row">
+	<div class="form-row">
 		{% for field in fields %}
 			<div class="col-sm-3 form-group">
 				<label for="{{ field }}">{{ manager.fieldAttribute(field, 'label') }}</label>
@@ -153,10 +153,10 @@
 		{% endfor %}
 	</div>
 
-	<legend>Paid-To-Date</legend>
+	<legend>Commissions Paid</legend>
 	{% set fields = ['paidmtd', 'paidytd', 'paidltd'] %}
 
-	<div class="row">
+	<div class="form-row">
 		{% for field in fields %}
 			<div class="col-sm-3 form-group">
 				<label for="{{ field }}">{{ manager.fieldAttribute(field, 'label') }}</label>
@@ -178,7 +178,7 @@
 		{% endfor %}
 	</div>
 
-	<div class="row mb-3">
+	<div class="form-row mb-3">
 		<div class="col-sm-3">
 			<div class="form-group">
 				{% include 'code-tables/mar/spm/form/vendorid.twig' %}
@@ -205,7 +205,7 @@
 
 		<div class="col-sm-3">
 			<div class="form-group">
-				<label for="restricted">Restricted</label>
+				<label for="restricted">Restrict Access</label>
 				{% include 'util/bootstrap/form/select-simple.twig' with {
 						'select': {
 							'size': 'sm',
